--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
   </div>
   <nav>
     <a class="nav1" href="#">
-      <h1>Adafio</h1>
+      <h1>Sports</h1>
     </a>
     <a class="nav2" href="#">
-      <h1>Kocha</h1>
+      <h1>Technologies</h1>
     </a>
     <a class="nav3" href="#">
-      <h1>Swoją</h1>
+      <h1>Politics</h1>
     </a>
     <a class="nav4" href="#">
-      <h1>Piękną</h1>
+      <h1>Business</h1>
     </a>
     <a class="nav5" href="#">
-      <h1>Dziewczynę</h1>
+      <h1>Finances</h1>
     </a>
   </nav>
 
